--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="main.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Tip calculator app</title>
@@ -15,39 +19,33 @@
   </style>
 </head>
 <body>
-  <img src="images/logo.svg" alt="spliter logo">
+  <img class="logo" src="images/logo.svg" alt="spliter logo">
   <div class="calc-wrapper">
     <div class="content-left">
       <h1>Bill</h1>
-      <form>
-        <label for="amount">
-          <input name="amount" value="0">
-        </label>
-      </form>
-
+      <input id="bill-amount" name="amount" placeholder="0">
+      
       <h1>Select Tip %</h1>
       <div class="tip-percent-grid">
-        <button class="tip-pct">5%</button>
-        <button class="tip-pct">10%</button>
-        <button class="tip-pct">15%</button>
-        <button class="tip-pct">25%</button>
-        <button class="tip-pct">50%</button>
-        <button class="custom-tip">Custom</button>
+        <button id="five-percent" class="tip-pct" data-tipAmount="5" >5%</button>
+        <button id="ten-percent" class="tip-pct" data-tipAmount="10" >10%</button>
+        <button id="fifteen-percent" class="tip-pct" data-tipAmount="15" >15%</button>
+        <button id="twenty-five-percent" class="tip-pct" data-tipAmount="25" >25%</button>
+        <button id="fifty-percent" class="tip-pct" data-tipAmount="50" >50%</button>
+        <input id="custom-percent" class="custom-tip" placeholder="Custom"></input>
       </div>
 
       <h1>Number of People</h1>
-      <form>
-        <label>
-          <input name="number-of-people" value="0">
-        </label>
-      </form>
+      
+      <input id="number-of-people" name="number-of-people" placeholder="0">
     </div>
 
     <div class="content-right">
       <div class="tip-per-person">
         <h2>
           Tip Amount
-          <span>/ person</span>
+          <br>
+          <span class="per-person">/ person</span>
         </h2>
         <p>$0.00</p>
       </div>
@@ -55,7 +53,8 @@
       <div class="amount-per-person">
         <h2>
           Total
-          / person
+          <br>
+          <span class="per-person">/ person</span>
         </h2>
         <p>$0.00</p>
       </div>
@@ -68,5 +67,6 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://mikekochendorfer.github.io/tip-calculator/">Michael Kochendorfer</a>.
   </div>
+  <script src="main.js"></script>
 </body>
 </html>
